creditas-sf/force-app/main/default/objects/CustomQueue__c/CustomQueue__c.object-meta.xml
<CustomObject>
    <label>Fila</label>
    <nameField>
        <label>Fila</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>