creditas-sf/force-app/main/default/objects/CustomQueue__c/fields/CustomSetup__c.field-meta.xml
<CustomField>
    <fullName>CustomSetup__c</fullName>
    <description>Relacionamento com o objeto de Custom Setup para determinar a pontuação de cada fila</description>
    <label>CustomSetup</label>
    <referenceTo>CustomSetup__c</referenceTo>
    <relationshipLabel>Filas</relationshipLabel>
    <relationshipName>CustomQueue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>