creditas-sf/force-app/main/default/objects/CustomQueue__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Pontuação das filas</description>
    <inlineHelpText>Escolha um valor entre 0 e 999</inlineHelpText>
    <label>Pontuação</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>