creditas-sf/force-app/main/default/objects/CustomQueue__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Tipo de Produto para a fila de @work</description>
    <inlineHelpText>O valor escolhido determinará qual a pontuação referente a esse produto.</inlineHelpText>
    <label>Tipo de Produto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductType</valueSetName>
    </valueSet>
</CustomField>