creditas-sf/force-app/main/default/objects/CustomQueue__c/validationRules/NoNegativeNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>NoNegativeNumber</fullName>
    <active>true</active>
    <description>Não permite colocar valores negativos</description>
    <errorConditionFormula>OR(Points__c &lt; 0, Points__c &gt; 999)</errorConditionFormula>
    <errorDisplayField>Points__c</errorDisplayField>
    <errorMessage>O valor da pontuação deve estar entre 0 e 999</errorMessage>
</ValidationRule>